--- a/Apoyo Desafío 2.html
+++ b/Apoyo Desafío 2.html
@@ -39,11 +39,11 @@ var dental = [
 //Agregar código para el desafio 2 aquí
 
 //Ejercicio N1
-traumatologia.push({hora:'09:00', especialista: 'RENE POBLETE', psciente: 'ANA GELLONA', rut: '13123329-7', prevision: 'ISAPRE'}),
-traumatologia.push({hora:'09:30', especialista: 'MARIA SOLAR', psciente: 'RAMIRP ANDRADE', rut: '12221451-k', prevision: 'FONASA'}),
-traumatologia.push({hora:'10:00', especialista: 'RAUL LOYOLA', psciente: 'CARMEN ISLA', rut: '10112348-3', prevision: 'ISAPRE'}),
-traumatologia.push({hora:'10:30', especialista: 'ANTONIO LARENAS', psciente: 'PABLO LOYAZA', rut: '13453234-1', prevision: 'ISAPRE'}),
-traumatologia.push({hora:'12:00', especialista: 'MATIAS ARAVENA', psciente: 'SUSANA POBLETE', rut: '14345656-6', prevision: 'FONASA'}),
+traumatologia.push({hora:'09:00', especialista: 'RENE POBLETE', paciente: 'ANA GELLONA', rut: '13123329-7', prevision: 'ISAPRE'}),
+traumatologia.push({hora:'09:30', especialista: 'MARIA SOLAR', paciente: 'RAMIRP ANDRADE', rut: '12221451-k', prevision: 'FONASA'}),
+traumatologia.push({hora:'10:00', especialista: 'RAUL LOYOLA', paciente: 'CARMEN ISLA', rut: '10112348-3', prevision: 'ISAPRE'}),
+traumatologia.push({hora:'10:30', especialista: 'ANTONIO LARENAS', paciente: 'PABLO LOYAZA', rut: '13453234-1', prevision: 'ISAPRE'}),
+traumatologia.push({hora:'12:00', especialista: 'MATIAS ARAVENA', paciente: 'SUSANA POBLETE', rut: '14345656-6', prevision: 'FONASA'}),
 
 
 //Ejercicio N2
@@ -51,28 +51,31 @@ radiologia.pop();
 radiologia.shift();
 
 //Ejercicio N3
+document.write(`<p>Lista de consulta Dental</p>`)
 for(let consulta of dental){
   document.write(`<p class="consulta">${consulta.hora} - ${consulta.especialista} - ${consulta.paciente} - ${consulta.rut} - ${consulta.prevision}</p>`); // Se pueden agregar clases
 }
 
 // Ejercicio N4 
-document.write('<ol>');
-for(let consulta of dental){
-  document.write(`<li>${consulta.paciente}</li>`);
-}
-document.write('</ol>');
 
-document.write('<ol>');
-for(let consulta of traumatologia){
-  document.write(`<li>${consulta.paciente}</li>`);
-}
-document.write('</ol>');
-
-document.write('<ol>');
+document.write('<ul>');
 for(let consulta of radiologia){
   document.write(`<li>${consulta.paciente}</li>`);
 }
-document.write('</ol>');
+document.write('</ul>');
+
+document.write('<ul>');
+for(let consulta of traumatologia){
+  document.write(`<li>${consulta.paciente}</li>`);
+}
+document.write('</ul>');
+
+document.write('<ul>');
+for(let consulta of dental){
+  document.write(`<li>${consulta.paciente}</li>`);
+}
+document.write('</ul>');
+
 
 // Ejercicio 5
 
@@ -81,6 +84,12 @@ for(let consulta of dental){
     document.write(`<div>${consulta.paciente} - ${consulta.prevision}</div>`);
   }
 }
+
+document.write('<ol>');
+for(let consulta of dental){
+  document.write(`<li>${consulta.paciente}</li>`);
+}
+document.write('</ol>');
 
 
 //Ejercicio N6
